# projectEuler

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Problem007.hs  README.md  Rakefile  Try.hs  design.md  euler.gemspec  package.yaml  pom.xml  problem001.hs  problem007-suren.hs  project.clj  projectEuler.cabal  sievesAndHaskell.md
app/: Main.hs  problem001.hs  problem002.hs  problem004.hs  problem005.hs  problem006.hs
lib/: euler.rb  prime.rb
project-euler/: project.clj
resources/java/src/main/java/com/decomputed/: Euler.java  Prime.java
resources/java/src/test/java/com/decomputed/: Problem0002Test.java  Problem0003Test.java
resources/ruby/: .travis.yml
resources/ruby/lib/: prime.rb
resources/ruby/test/: TestProblem001.rb
src/: Lib.hs  Problem002.hs  problem003.hs
src/main/java/com/decomputed/: App.java  Fibonacci.java  Multiple.java  Number.java  Prime.java  Runner.java
src/project_euler/: core.clj
src/test/java/com/decomputed/: APITest.java  AppTest.java  MultipleTest.java  Problem0001Test.java  Problem0002Test.java
src/test/java/com/decomputed/api/: MultipleTest.java
test/: Spec.hs  TestProblem001.rb
test/project_euler/: core_test.clj
