cabal-version: 3.0

name:           projectEuler
version:        0.1.0.0

library
  build-depends: base
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Problem001

test-suite unit
  build-depends: base, hspec, projectEuler
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0


